third_party/move/move-compiler-v2/tests/more-v1/expansion/unpack_assign_block_expr.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/expansion/unpack_assign_block_expr.move:4:13
  │
4 │         S { let f = 0; } = S { f: 0 };
  │             ^^^
  │             │
  │             Unexpected 'let'
  │             Expected an identifier
